remove unnecessary file and update editEmployee file

--- a/springboostcrud2/src/main/resources/templates/index.html
+++ b/springboostcrud2/src/main/resources/templates/index.html
@@ -60,7 +60,7 @@
 																th:object="${employee}" method="GET">
 																<div class="form-group">
 																<input type="text" class="form-control col-md-8"
-																		placeholder="Search Here" th:field="*{name}"/>
+																		placeholder="Search with name" th:field="*{name}"/>
 																</div>
 																&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input class="form-control col-md-8" type="submit" value="Search"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 																<a th:href="addEmployee"><b>Add Employee</b></a>
