--- a/springboostcrud2/src/main/resources/templates/index.html
+++ b/springboostcrud2/src/main/resources/templates/index.html
@@ -107,11 +107,11 @@
 	<button class="material-scrolltop primary" type="button"></button>
 
 	<script th:src="@{js/jquery-1.11.3.min.js}"></script>
-	<script src="@{js/bootstrap.min.js}"></script>
-	<script src="@{js/ripples.min.js}"></script>
-	<script src="@{js/material.min.js}"></script>
-	<script src="@{js/material-scrolltop.js}"></script>
-	<script src="@{js/main.js}"></script>
+	<script th:src="@{js/bootstrap.min.js}"></script>
+	<script th:src="@{js/ripples.min.js}"></script>
+	<script th:src="@{js/material.min.js}"></script>
+	<script th:src="@{js/material-scrolltop.js}"></script>
+	<script th:src="@{js/main.js}"></script>
 
 	<script>
 		$.material.init();
