--- a/springboostcrud2/src/main/resources/templates/employee.html
+++ b/springboostcrud2/src/main/resources/templates/employee.html
@@ -10,18 +10,19 @@
 <link rel="icon" th:href="@{favicon.ico}" />
 
 <title>Employee Management</title>
-<script th:src="@{js/pace.min.js}"></script>
-<link th:href="@{css/bootstrap.min.css}" rel="stylesheet" />
-<link th:href="@{css/font-awesome.min.css}" rel="stylesheet" />
-<link th:href="@{css/bootstrap-material-design.css}" rel="stylesheet" />
-<link th:href="@{css/ripples.min.css}" rel="stylesheet" />
-<link th:href="@{css/material-scrolltop.css}" rel="stylesheet" />
-<link th:href="@{css/material-blog.css}" rel="stylesheet" />
+<script src="@{js/pace.min.js}"></script>
+<link th:href="@{css/bootstrap.min.css}" rel="stylesheet"></link>
+<link th:href="@{css/font-awesome.min.css}" rel="stylesheet"></link>
+<link th:href="@{css/bootstrap-material-design.css}" rel="stylesheet"></link>
+<link th:href="@{css/ripples.min.css}" rel="stylesheet"></link>
+<link th:href="@{css/material-scrolltop.css}" rel="stylesheet"></link>
+<link th:href="@{css/material-blog.css}" rel="stylesheet"></link>
 <link
-	href="@{https://fonts.googleapis.com/css?family=Roboto:300,400,500,700}"
-	rel="stylesheet" type="text/css" />
-<link href="@{https://fonts.googleapis.com/icon?family=Material+Icons}"
-	rel="stylesheet" type="text/css" />
+	th:href="@{https://fonts.googleapis.com/css?family=Roboto:300,400,500,700}"
+	rel="stylesheet"  type="text/css"></link>
+<link th:href="@{https://fonts.googleapis.com/icon?family=Material+Icons}"
+	rel="stylesheet" type="text/css"></link>
+</head>
 </head>
 
 <body>
@@ -51,13 +52,10 @@
 														<span class="icon-bar"></span> <span class="icon-bar"></span>
 														<span class="icon-bar"></span>
 													</button>
-													<a class="navbar-brand" href="@{/}">Manage Employee
+													<a class="navbar-brand" th:href="@{/}">Manage Employee
 														Information</a>
 												</div>
-
-
 											</div>
-
 										</div>
 
 										<h2 class="blog-post-title">Employee Registration</h2>
@@ -109,11 +107,11 @@
 	<button class="material-scrolltop primary" type="button"></button>
 
 	<script th:src="@{js/jquery-1.11.3.min.js}"></script>
-	<script src="@{js/bootstrap.min.js}"></script>
-	<script src="@{js/ripples.min.js}"></script>
-	<script src="@{js/material.min.js}"></script>
-	<script src="@{js/material-scrolltop.js}"></script>
-	<script src="@{js/main.js}"></script>
+	<script th:src="@{js/bootstrap.min.js}"></script>
+	<script th:src="@{js/ripples.min.js}"></script>
+	<script th:src="@{js/material.min.js}"></script>
+	<script th:src="@{js/material-scrolltop.js}"></script>
+	<script th:src="@{js/main.js}"></script>
 
 	<script>
 		$.material.init();
