--- a/springboostcrud2/src/main/resources/templates/employee.html
+++ b/springboostcrud2/src/main/resources/templates/employee.html
@@ -5,12 +5,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<meta name="description" content="" />
+<meta name="description" content=""/>
 <meta name="author" content="" />
-<link rel="icon" th:href="@{favicon.ico}" />
+<link rel="icon" th:href="@{favicon.ico}"></link>
 
 <title>Employee Management</title>
-<script src="@{js/pace.min.js}"></script>
+<script th:src="@{js/pace.min.js}"></script>
 <link th:href="@{css/bootstrap.min.css}" rel="stylesheet"></link>
 <link th:href="@{css/font-awesome.min.css}" rel="stylesheet"></link>
 <link th:href="@{css/bootstrap-material-design.css}" rel="stylesheet"></link>
@@ -22,7 +22,6 @@
 	rel="stylesheet"  type="text/css"></link>
 <link th:href="@{https://fonts.googleapis.com/icon?family=Material+Icons}"
 	rel="stylesheet" type="text/css"></link>
-</head>
 </head>
 
 <body>
@@ -112,7 +111,6 @@
 	<script th:src="@{js/material.min.js}"></script>
 	<script th:src="@{js/material-scrolltop.js}"></script>
 	<script th:src="@{js/main.js}"></script>
-
 	<script>
 		$.material.init();
 		$('body').materialScrollTop();
