--- a/springboostcrud2/src/main/resources/templates/employeeEdit.html
+++ b/springboostcrud2/src/main/resources/templates/employeeEdit.html
@@ -7,17 +7,17 @@
 
 <meta name="description" content=""></meta>
 <meta name="author" content=""></meta>
-<link rel="icon" href="@{favicon.ico}"></link>
+<link rel="icon" th:href="@{favicon.ico}"></link>
 
 <title>Employee Management</title>
 
 <script th:src="@{js/pace.min.js}"></script>
-<link href="../static/css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" rel="stylesheet" />
-<link href="../static/css/font-awesome.min.css" th:href="@{css/font-awesome.min.css}" rel="stylesheet" />
-<link href="../static/css/bootstrap-material-design.css" th:href="@{css/bootstrap-material-design.css}" rel="stylesheet" />
-<link href="../static/css/ripples.min.css" th:href="@{css/ripples.min.css}" rel="stylesheet" />
-<link href="../static/css/material-scrolltop.css" th:href="@{css/material-scrolltop.css}" rel="stylesheet" />
-<link href="../static/css/material-blog.css" th:href="@{css/material-blog.css}" rel="stylesheet" />
+<link th:href="@{css/bootstrap.min.css}" rel="stylesheet" />
+<link th:href="@{css/font-awesome.min.css}" rel="stylesheet" />
+<link th:href="@{css/bootstrap-material-design.css}" rel="stylesheet" />
+<link th:href="@{css/ripples.min.css}" rel="stylesheet" />
+<link th:href="@{css/material-scrolltop.css}" rel="stylesheet" />
+<link th:href="@{css/material-blog.css}" rel="stylesheet" />
 <link
 	th:href="@{https://fonts.googleapis.com/css?family=Roboto:300,400,500,700}"
 	rel="stylesheet" type="text/css" />
@@ -106,12 +106,12 @@
 	</div>
 	<button class="material-scrolltop primary" type="button"></button>
 
-	<script src="/static/js/jquery-1.11.3.min.js" th:src="@{js/jquery-1.11.3.min.js}"></script>
-	<script src="/static/js/bootstrap.min.js" th:src="@{js/bootstrap.min.js}"></script>
-	<script src="/static/js/ripples.min.js" th:src="@{js/ripples.min.js}"></script>
-	<script src="/static/js/material.min.js" th:src="@{js/material.min.js}"></script>
-	<script src="/static/js/material-scrolltop.js" th:src="@{js/material-scrolltop.js}"></script>
-	<script src="/static/js/main.js" th:src="@{js/main.js}"></script>
+	<script th:src="@{js/jquery-1.11.3.min.js}"></script>
+	<script th:src="@{js/bootstrap.min.js}"></script>
+	<script th:src="@{js/ripples.min.js}"></script>
+	<script th:src="@{js/material.min.js}"></script>
+	<script th:src="@{js/material-scrolltop.js}"></script>
+	<script th:src="@{js/main.js}"></script>
 
 	<script>
 		$.material.init();
