employeeedit with css found

--- a/springboostcrud2/src/main/resources/templates/employeeEdit.html
+++ b/springboostcrud2/src/main/resources/templates/employeeEdit.html
@@ -11,13 +11,13 @@
 
 <title>Employee Management</title>
 
-<script th:src="@{js/pace.min.js}"></script>
-<link th:href="@{css/bootstrap.min.css}" rel="stylesheet" />
-<link th:href="@{css/font-awesome.min.css}" rel="stylesheet" />
-<link th:href="@{css/bootstrap-material-design.css}" rel="stylesheet" />
-<link th:href="@{css/ripples.min.css}" rel="stylesheet" />
-<link th:href="@{css/material-scrolltop.css}" rel="stylesheet" />
-<link th:href="@{css/material-blog.css}" rel="stylesheet" />
+<script th:src="@{/js/pace.min.js}"></script>
+<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+<link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" />
+<link th:href="@{/css/bootstrap-material-design.css}" rel="stylesheet" />
+<link th:href="@{/css/ripples.min.css}" rel="stylesheet" />
+<link th:href="@{/css/material-scrolltop.css}" rel="stylesheet" />
+<link th:href="@{/css/material-blog.css}" rel="stylesheet" />
 <link
 	th:href="@{https://fonts.googleapis.com/css?family=Roboto:300,400,500,700}"
 	rel="stylesheet" type="text/css" />
@@ -106,12 +106,12 @@
 	</div>
 	<button class="material-scrolltop primary" type="button"></button>
 
-	<script th:src="@{js/jquery-1.11.3.min.js}"></script>
-	<script th:src="@{js/bootstrap.min.js}"></script>
-	<script th:src="@{js/ripples.min.js}"></script>
-	<script th:src="@{js/material.min.js}"></script>
-	<script th:src="@{js/material-scrolltop.js}"></script>
-	<script th:src="@{js/main.js}"></script>
+	<script th:src="@{/js/jquery-1.11.3.min.js}"></script>
+	<script th:src="@{/js/bootstrap.min.js}"></script>
+	<script th:src="@{/js/ripples.min.js}"></script>
+	<script th:src="@{/js/material.min.js}"></script>
+	<script th:src="@{/js/material-scrolltop.js}"></script>
+	<script th:src="@{/js/main.js}"></script>
 
 	<script>
 		$.material.init();
