--- a/springboostcrud2/src/main/resources/templates/employee.html
+++ b/springboostcrud2/src/main/resources/templates/employee.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<meta name="description" content=""/>
+<meta name="description" content="" />
 <meta name="author" content="" />
 <link rel="icon" th:href="@{favicon.ico}"></link>
 
@@ -19,8 +19,9 @@
 <link th:href="@{css/material-blog.css}" rel="stylesheet"></link>
 <link
 	th:href="@{https://fonts.googleapis.com/css?family=Roboto:300,400,500,700}"
-	rel="stylesheet"  type="text/css"></link>
-<link th:href="@{https://fonts.googleapis.com/icon?family=Material+Icons}"
+	rel="stylesheet" type="text/css"></link>
+<link
+	th:href="@{https://fonts.googleapis.com/icon?family=Material+Icons}"
 	rel="stylesheet" type="text/css"></link>
 </head>
 
@@ -39,8 +40,8 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<div class="blog-post-content">
-										<h1 class="blog-post-title">Employee Management Screen</h1>
-										<br/>
+									<div th:replace="header::header"></div>
+										<br />
 
 										<div class="navbar navbar-inverse">
 											<div class="container-fluid">
@@ -64,15 +65,16 @@
 											<div class="form-group">
 												<label class="col-sm-2 col-sm-2 control-label">Name</label>
 												<div class="col-sm-10">
-													<input type="text" class="form-control" th:field="*{name}"
-														th:required="required" />
+													<input type="text" class="form-control" th:field="*{name}" />
+													<div class="col-sm-10" th:if="${#fields.hasErrors('name')}"
+														th:errors="*{name}" th:style="${'color:red'}"></div>
 												</div>
+
 											</div>
 											<div class="form-group">
 												<label class="col-sm-2 col-sm-2 control-label">Age</label>
 												<div class="col-sm-10">
-													<input type="text" class="form-control" th:field="*{age}"
-														th:required="required" />
+													<input type="text" class="form-control" th:field="*{age}" />
 												</div>
 											</div>
 
@@ -82,17 +84,30 @@
 													<div class="dropdown">
 														<select class="btn btn-primary dropdown-toggle"
 															data-toggle="dropdown" th:field="*{city}">
-															<option th:value="''" th:text="---Select---"></option>
+															<option th:value="null" th:text="---Select---"></option>
 															<option th:value="'Landon'" th:text="Landon"></option>
 															<option th:value="'USA'" th:text="USA"></option>
 															<option th:value="'Spain'" th:text="Spain"></option>
 														</select>
 													</div>
+													<div class="col-sm-10"
+														th:if="${#fields.hasErrors('city')}" th:errors="*{city}"
+														th:style="${'color:red'}"></div>
+												</div>
+											</div>
+											<div class="form-group">
+												<label class="col-sm-2 col-sm-2 control-label">Email</label>
+												<div class="col-sm-10">
+													<input type="text" class="form-control" th:field="*{email}" />
+													<div class="col-sm-10"
+														th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+														th:style="${'color:red'}"></div>
 												</div>
 											</div>
 											<input class="btn btn-primary" type="submit" value="Save" />
 											<a th:href="@{/addEmployee}" class="btn btn-warning">Cancel</a>
 										</form>
+										<div th:replace="footer::footer"></div>
 									</div>
 								</div>
 							</div>
