--- a/springboostcrud2/src/main/resources/templates/employeeEdit.html
+++ b/springboostcrud2/src/main/resources/templates/employeeEdit.html
@@ -38,7 +38,6 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<div class="blog-post-content">
-										<h1 class="blog-post-title">Employee Management Screen</h1>
 										<br />
 
 										<div class="navbar navbar-inverse">
@@ -91,8 +90,15 @@
 													</div>
 												</div>
 											</div>
+											
+											<div class="form-group">
+												<label class="col-sm-2 col-sm-2 control-label">Email</label>
+												<div class="col-sm-10">
+													<input type="text" class="form-control" th:field="*{email}"/>
+												</div>
+											</div>
 
-											<input class="btn btn-primary" type="submit" value="Save" />
+											<input class="btn btn-primary" type="submit" value="Update" />
 											<a th:href="@{/update/{id}(id=${updateEmployee.id})}" class="btn btn-warning">Cancel</a>
 										</form>
 									</div>
