adding header and footer

--- a/springboostcrud2/src/main/resources/templates/footer.html
+++ b/springboostcrud2/src/main/resources/templates/footer.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div th:fragment="footer">
-		<h1>Copy Right</h1>
+		<h1 align="center">Copy Right</h1>
 	</div>
 </body>
 </html>
