--- a/springboostcrud2/src/main/resources/templates/header.html
+++ b/springboostcrud2/src/main/resources/templates/header.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div th:fragment="header">
-<h1>Employee Management Screen</h1>
+<h1 align="center">Employee Management Screen</h1>
 
 </div>
 
